# water-simulation

./: Cargo.toml  README.md
settings/: Cargo.toml
settings/src/: lib.rs  settings.rs
settings_ui/: Cargo.toml
settings_ui/src/: main.rs
simulation/: Cargo.toml
simulation/src/: geometry.rs  main.rs  particle.rs  state.rs  vertex.rs
simulation/src/shaders/: shader.wgsl  simulation.wgsl  sort_prep.wgsl
simulation/src/uniforms/: camera.rs  frame_time.rs  mod.rs  parameters.rs
src/: camera.rs  geometry.rs  main.rs  particle.rs  shader.wgsl  state.rs  vertex.rs
src/shaders/: shader.wgsl  simulation.wgsl  sort_prep.wgsl  tmp.wgsl
src/uniforms/: frame_time.rs  mod.rs  parameters.rs
ui/: Cargo.toml
ui/src/: main.rs
