[package]
name = "water-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = {version = "0.29.15", features=["rwh_06"]}
wgpu = "0.19.3"
bytemuck = { version = "1.12", features = [ "derive" ] }

env_logger = "0.10"
log = "0.4"
pollster = "0.3.0"

anyhow = "1.0.81"

cgmath = "0.18.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
