[workspace]
members = [ 
    "settings", 
    "simulation",
    "settings_ui"
]

[package]
name = "water-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
