[package]
name = "simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
settings = { path = "../settings"}

winit = {version = "0.29.15", features=["rwh_06"]}
wgpu = "0.19.3"
wgpu_sort = "0.1.0"
bytemuck = { version = "1.12", features = [ "derive" ] }
web-time = "1.1.0"

pollster = "0.3.0"
once_cell = "1.19.0"

anyhow = "1.0.81"
cgmath = "0.18.0"

interprocess = "1.2.1"
bincode = "1.3.3"

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = "0.4.21"

