[package]
name = "ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
settings = { path = "../settings"}

eframe = "0.27.1"
interprocess = "1.2.1"
bincode = "1.3.3"

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
log = "0.4.21"
